--- a/app/partials/admin/admin-project-values-us-status.jade
+++ b/app/partials/admin/admin-project-values-us-status.jade
@@ -11,8 +11,5 @@ div.wrapper(tg-project-values, ng-controller="ProjectValuesController as ctrl",
         include ../includes/components/mainTitle
         p.admin-subtitle Specify the column headers that you will use to classify User Stories
 
-        div.project-values-options
-            a.button.button-green.show-add-new(href="", title="Add New")
-                span Add new status
-
         include ../includes/modules/admin/project-us-status
+        include ../includes/modules/admin/project-us-csv
