--- a/app/styles/layout/admin-project-values.scss
+++ b/app/styles/layout/admin-project-values.scss
@@ -12,7 +12,31 @@
     }
 }
 
-.project-values-options {
-    margin-bottom: 1rem;
-    text-align: right;
+.project-us-status {
+    margin-bottom: 2rem;
 }
+
+.project-values-title {
+    align-content: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    h2 {
+        margin: 0;
+        span {
+            color: $gray-light;
+            margin-left: .5rem;
+            text-transform: none;
+        }
+    }
+    a {
+        display: inline-block;
+    }
+}
+
+//.project-values-options {
+//    margin-bottom: 1rem;
+//    text-align: right;
+//}
