--- a/app/partials/includes/modules/admin/project-us-csv.jade
+++ b/app/partials/includes/modules/admin/project-us-csv.jade
@@ -3,7 +3,7 @@ section.project-us-csv
     div.project-values-title
         h2 Export US Data
             span (.csv format)
-        a.button.button-green(href="", title="Show CSV")
+        a.button.button-gray(href="", title="Show CSV")
             span Download CSV
 
     p Get all information about your project user stories. Save all your data y a <em>.csv</em> file and open it in your favourite text editor or spreadsheet. You will be able to visualize and analize all your data easily.
@@ -12,8 +12,7 @@ section.project-us-csv
             input(type="text", placeholder="Please regenerate CSV url", readonly)
             .option-wrapper.select-input-content
                 .icon.icon-copy
-        a.button.button-gray(href="", title="Regenerate CSV url")
-            span.icon.icon-reload
+        a.icon.icon-reload(href="", title="Regenerate CSV url") Regenerate URL
 
     a.help-button(href="", target="_blank")
         span.icon.icon-help
