--- a/app/partials/includes/modules/admin/project-us-status.jade
+++ b/app/partials/includes/modules/admin/project-us-status.jade
@@ -2,7 +2,7 @@ section.project-us-status
 
     div.project-values-title
         h2 Status
-        a.button.button-green.show-add-new(href="", title="Add New")
+        a.button.button-gray.show-add-new(href="", title="Add New")
             span Add new status
 
     div.colors-table
